--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=G-B04YT6DZQV"
+    src="https://www.googletagmanager.com/gtag/js?id=G-ZD80MDDKTX"
   ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -17,7 +17,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-B04YT6DZQV");
+    gtag("config", "G-ZD80MDDKTX");
   </script>
   <body>
     <div id="root"></div>
