--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     gtag("config", "G-ZD80MDDKTX");
   </script>
-  <body>
-    <div id="root"></div>
+  <body data-sb-object-id="1">
+    <div id="root" data-sb-field-path="title"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
